# AimHelper

./: .gitignore  AimHelper.py  pyproject.toml
aim_helper/: __main__.py  aim_daemon.py  aim_session.py  app.py  resources.py  settings.py  worklist.py
aimhelper/: aimhelper-0.50-py3-none-any.whl
test/: dummy_objects.py  error-test.py  test.csv
