[build-system]
requires = ["hatchling", "hatch-pyinstaller"]
build-backend = "hatchling.build"

[project]
name = "AimHelper"
dependencies = ["keyring", "PyQt6", "requests", "selenium", "platformdirs"]
requires-python = ">= 3.9"
description = "A backgroud application that automates routine AiM tasks"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",

]

[project.gui-scripts]
aimhelper = "__main__:main"

[tool.hatch.version]
path = "aim_helper/__init__.py"

[tool.hatch.build.targets.pyinstaller]
require-runtime-dependencies = true
flags = ["--clean", "--noconfirm", "--onedir", "--windowed"]
icon = "aim_helper/res/aim.png"
collect-data = ["aim_helper"]
