[build-system]
requires = ["hatchling", "hatch-pyinstaller"]
build-backend = "hatchling.build"

[project]
name = "AimHelper"
dependencies = ["keyring", "PySide6", "requests", "selenium", "platformdirs"]
requires-python = ">= 3.9"
description = "A backgroud application that automates routine AiM tasks"
dynamic = ["version"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",

]

[project.gui-scripts]
aimhelper = "aim_helper.app:run"

[tool.hatch.version]
path = "aim_helper/__init__.py"

[tool.hatch.build.targets.pyinstaller]
require-runtime-dependencies = true
flags = ["--clean", "--noconfirm", "--onedir", "--windowed"]
icon = "aim_helper/res/aim.png"
collect-data = ["aim_helper"]
